- add linked challenge system