@@ -25,11 +25,28 @@ public class ChallengeManager {
         registerChallengesEvent(skyblock, skyblock.getServer().getPluginManager());
     }
 
+    public void init() {
+        registeredChallenges.stream().parallel().forEach(challenge -> challenge.getChallengeProgress().updateDefaultChallengeStatus());
+    }
+
+
     private void createChallenges(SkyBlock skyblock) {
         addNewChallenges(
-                new ReproduceAnimalChallenge(skyblock, 1, Challenge.Difficulty.EASY, Arrays.asList(5, 2),
-                        Arrays.asList(Arrays.asList(EntityType.COW, EntityType.SHEEP), List.of(EntityType.PIG)),
-                        new Reward(List.of(new ItemStack(Material.IRON_INGOT, 5)), 5), 1)
+                new ReproduceAnimalChallenge(skyblock, 0, Challenge.Difficulty.EASY, List.of(1), Arrays.asList(1, 1), Arrays.asList(Arrays.asList(EntityType.COW, EntityType.CHICKEN), List.of(EntityType.PIG)),
+                        new Reward(List.of(new ItemStack(Material.IRON_INGOT)), 5), 1, Material.WHEAT, "Started from the bottom"),
+
+                new ReproduceAnimalChallenge(skyblock, 1, Challenge.Difficulty.EASY, List.of(4), List.of(5), List.of(List.of(EntityType.SHEEP)),
+                        new Reward(List.of(new ItemStack(Material.IRON_INGOT, 5))), 2, Material.APPLE, "Still at the bottom"),
+
+                new ReproduceAnimalChallenge(skyblock, 2, Challenge.Difficulty.EASY, List.of(4), List.of(2), List.of(List.of(EntityType.CHICKEN)),
+                        new Reward(List.of(new ItemStack(Material.IRON_INGOT, 5))), 3, Material.APPLE, "Still at the bottom n°2"),
+
+
+                new ReproduceAnimalChallenge(skyblock, 3, Challenge.Difficulty.NORMAL, List.of(4), List.of(5), List.of(List.of(EntityType.PIG)),
+                        new Reward(List.of(new ItemStack(Material.DIAMOND, 2))), 1, Material.BONE_MEAL, "Step up bis", "don't stay stand up"),
+
+                new ReproduceAnimalChallenge(skyblock, 4, Challenge.Difficulty.NORMAL, List.of(10), List.of(List.of(EntityType.COW)),
+                        new Reward(List.of(new ItemStack(Material.DIAMOND, 2))), 2, Material.BONE_MEAL, "Step up", "stay stand up")
                 );
     }
 
@@ -49,7 +66,6 @@ public class ChallengeManager {
         return registeredChallenges.stream().parallel().anyMatch(challenge -> challenge.getName().equalsIgnoreCase(name));
     }
 
-
     @Nullable
     public Challenge<? extends Event> getChallengeByID(int id) {
         return registeredChallenges.stream().parallel().filter(challenge -> challenge.getID() == id).findFirst().orElse(null);
@@ -57,7 +73,7 @@ public class ChallengeManager {
 
     @Nullable
     public Challenge<? extends Event> getChallengeByName(String name) {
-        return registeredChallenges.stream().parallel().filter(challenge -> challenge.getName() == name).findFirst().orElse(null);
+        return registeredChallenges.stream().parallel().filter(challenge -> challenge.getName().equalsIgnoreCase(name)).findFirst().orElse(null);
     }
 
     @Nullable
@@ -86,7 +102,6 @@ public class ChallengeManager {
 
             getRegisteredChallenges().add(challenge);
         });
-
     }
 
 }
